@@ -10,11 +10,11 @@ namespace flash.display
 		public BitmapData bitmapData { get; set; }
 
 		public double x {
-			set { this.bitmapData.x = (float)value; }
+			set { this.bitmapData.x = value; }
 			get { return this.bitmapData.x; }
 		}
 		public double y {
-			set { this.bitmapData.y = (float)value; }
+			set { this.bitmapData.y = value; }
 			get { return this.bitmapData.y; }
 		}
 		public double width {
@@ -23,11 +23,23 @@ namespace flash.display
 		public double height {
 			get { return this.bitmapData.height; }
 		}
-
+		public double scaleX {
+			set { this.bitmapData.scaleX = value; }
+			get { return this.bitmapData.scaleX; }
+		}
+		public double scaleY {
+			set { this.bitmapData.scaleY = value; }
+			get { return this.bitmapData.scaleY; }
+		}
 
 		public Bitmap(BitmapData bitmapData = null, String pixelSnapping = "auto", Boolean smoothing = false)
 		{
 			this.bitmapData = bitmapData;
+		}
+
+		// 追加、ファイル名指定
+		public Bitmap(String fileName) : this( new BitmapData(fileName) )
+		{
 		}
 
 		~Bitmap()
@@ -44,11 +56,11 @@ namespace flash.display
 
 		public override void Render ()
 		{
-			if( this.Status == ActorStatus.Action && bitmapData != null ){
+			base.Render();
+
+			if( bitmapData != null ){
 				bitmapData.Render();
 			}
-
-			base.Render ();
 		}
 	}
 }
