@@ -1,0 +1,8 @@
+﻿using System;
+
+namespace flash.display
+{
+    public class InteractiveObject : DisplayObject {
+
+    }
+}
