@@ -1,0 +1,6 @@
+﻿namespace flash.display
+{
+    public class Sprite : DisplayObjectContainer {
+
+    }
+}
