@@ -1,0 +1,11 @@
+﻿namespace flash.display
+{
+    public class Stage : DisplayObjectContainer {
+//        public int stageWidth { get { return XnaGame.Instance.GameWindow.Width; } }
+//        public int stageHeight { get { return XnaGame.Instance.GameWindow.Height; } }
+//FIXME:	
+
+        public string displayState { get; set; }
+        public string scaleMode { get; set; }
+    }
+}
