@@ -1,3 +1,8 @@
+2013-08-23  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	event関連追加
+
 2013-08-10  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
